<resources>
    <string name="app_name">Data Anak UTS 10117904</string>

    <string name="tagline">Ayah Bunda silahkan mengisi data anak dibawah ini</string>
    <string name="panggilan">Nama Panggilan Anak</string>
    <string name="isinama">Isi dengan nama anak anda</string>
    <string name="jeniskelamin">Jenis Kelamin</string>
    <string name="lakilaki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="umur">Umur Saat Ini</string>
    <string name="cthumur">cth : 12</string>
    <string name="warning">*Umur diperlukan untuk rekomendasi waktu penggunaan handphone anak anda</string>
    <string name="daftar">Daftar</string>
    <string name="selamat">Yeay, Selamat :)</string>
    <string name="display">%s %s %s Berhasil Ditambahkan. Silahkan Gunakan Kode Ini Untuk Masuk Kedalam Aplikasi Anak</string>
    <string name="tutor">Lihat Tutorial</string>
</resources>
