<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="@dimen/dimen18"
    tools:context=".WelcomeActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen18">

            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/ic_welcome_parent"
                android:layout_height="@dimen/dimen170"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/selamat"
                android:textSize="@dimen/font20"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen18"
                android:layout_marginEnd="@dimen/dimen18"
                android:gravity="center"
                android:text="@string/display"
                android:textSize="@dimen/font18"/>

            <Button
                style="@style/OTPButton"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/dimen20"
                android:layout_marginLeft="@dimen/dimen20"
                android:layout_marginEnd="@dimen/dimen20"
                android:layout_marginRight="@dimen/dimen20"
                android:text="@string/daftar"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>